--- a/assets/kiyoh-icons.css
+++ b/assets/kiyoh-icons.css
@@ -1,1 +1,11 @@
-
+.icon {
+  font-family: 'kiyoh-icons';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
